--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,19 @@ readme = "README.md"
 python = ">=3.10,<3.12"
 jupyterlab = "^4.0.9"
 sentence-transformers = "^2.2.2"
-tiktoken = "^0.5.1"
+# --- UPDATED TIKTOKEN DEPENDENCY ---
+tiktoken = "^0.7.0" # Updated to meet langchain-openai requirement
+# -----------------------------------
 faiss-cpu = "^1.7.4"
 magentic = {extras = ["anthropic", "litellm"], version = "^0.24.0"}
 pydantic = "2.7.1"
-openbb = "4.1.7"
-langchain = "^0.1.17"
-langchain-community = "^0.0.37"
-langchain-openai = "^0.1.6"
+openbb = "^4.1.7"
+langchain = "^0.2.0"
+langchain-community = "^0.2.0"
+langchain-openai = "^0.1.9"
 openbb-yfinance = "^1.1.5"
+google-generativeai = "^0.5.0"
+langchain-google-genai = "^1.0.5"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
